# FolderWordMaker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: test.yml
scripts/: build_mac.command  build_windows.bat  run_mac.command  run_windows.bat
src/word_merge_app/: app.py  core.py
tests/: test_core.py
