[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-word-maker"
version = "1.0.1"
description = "Desktop app for merging folder images and PDFs into Word documents."
requires-python = ">=3.9"
dependencies = [
  "PySide6==6.9.1",
  "Pillow==11.2.1",
  "PyMuPDF==1.26.1",
  "python-docx==1.1.2",
]

[project.optional-dependencies]
build = ["pyinstaller==6.14.1"]
test = ["pytest>=8.0"]

[project.scripts]
folder-word-maker = "word_merge_app.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
